[package]
name = "rust_s3"
version = "0.1.0"
edition = "2021"

#https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
actix-cors = "0.6.4"

rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
log = "0.4"
env_logger = "0.10.0"
